Fixed the colors to be softer in the Variables, Models, Legend, and the node arch. Fixed popup on the logo to no longer display behind the left panel. Fixed the delete and create links in the workspace carousel to no longer cause the page to jump. Made the Legend icons circles rather than squares.

--- a/app.css
+++ b/app.css
@@ -187,7 +187,7 @@ div.popover.variables div.popover-content.form-horizontal .form-group {
 
 #rightpanel.closepanel {width:1px;}
 #rightpanel.closepanel ul.nav-tabs {display:none;}
-#rightpanel.closepanel div.row-fluid.closepanel {display:none;}
+#rightpanel.closepanel div.btn-toolbar {display:none;}
 #rightpanel div#toggleRpanelicon {width:32px;height:30px;position:absolute;top:calc(50% - 15px);right:calc(100% - 29px);}/*border:1px solid #ADADAD;border-width-left:0;}*/
 #rightpanel.closepanel div#toggleRpanelicon {left:2px;}
 #rightpanel.closepanel div#toggleRpanelicon span.glyphicon{
@@ -217,8 +217,8 @@ div.popover.variables div.popover-content.form-horizontal .form-group {
     border:1px solid #ADADAD;  */
 }
 
-#transSel li:hover { background-color:#FA8072; cursor:pointer;}
-#transList li:hover { background-color:#FA8072; cursor:pointer;}
+#transSel li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}
+#transList li:hover { background-color:rgba(250, 128, 114, 0.5); cursor:pointer;}
 
 #spacetools {
     z-index: 17;
@@ -267,6 +267,9 @@ div.popover.variables div.popover-content.form-horizontal .form-group {
     width:20px;
     height:20px;
     margin-right:4px;
+    /*opacity: 0.5;*/
+}
+.legendary .rectColor circle {
     opacity: 0.5;
 }
 .legendary .rectLabel {
